<resources>
    <string name="app_name">JoKenPo</string>
    <string name="titulo">Jo-ken-Po! \n(Pedra, papel e tesoura)</string>
    <string name="instrucoes">

        <b>Regras:</b>\n
        • Escolha entre Pedra, Papel ou Tesoura.\n
        • O adversário também fará uma escolha.\n
        • As jogadas são comparadas e o vencedor\n
          é determinado da seguinte forma:\n
            🪨 Pedra quebra Tesoura\n
            📄 Papel embrulha Pedra\n
            ✂️ Tesoura corta Papel\n
            \n
        <b>Para Jogar:</b>\n
        • Toque no objeto para escolher seu objeto.\n
        • Aguarde para descubrir quem venceu!

    </string>
    <string name="pedra">Pedra</string>
    <string name="papel">Papel</string>
    <string name="tesoura">Tesoura</string>
    <string name="pedra_icon_description">ícone de pedra</string>
    <string name="papel_icon_description">ícone de papel</string>
    <string name="tesoura_icon_description">ícone de tesoura</string>
    <string name="imgUser_icon_description">Escolha do usuário</string>
    <string name="imgCpu_icon_description">Escolha da CPU</string>
    <string name="selecione">Escolha um dos ícones abaixo para sua jogada:</string>
</resources>