<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cor_fundo"
    tools:context=".MainActivity2">

    <ImageView
        android:id="@+id/iconeSelecionado"
        android:layout_width="150sp"
        android:layout_height="150sp"
        android:layout_marginTop="32dp"
        android:background="@drawable/ic_vazio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.033"
        tools:ignore="ContentDescription" />

    <ImageView
        android:id="@+id/view_pedra"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/ic_pedra"
        android:contentDescription="@string/pedra_icon_description"
        app:layout_constraintEnd_toStartOf="@+id/view_papel"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_info"
        tools:ignore="UsingOnClickInXml" />

    <ImageView
        android:id="@+id/view_papel"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/ic_papel"
        android:contentDescription="@string/papel_icon_description"
        app:layout_constraintEnd_toStartOf="@+id/view_tesoura"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/view_pedra"
        app:layout_constraintTop_toBottomOf="@+id/text_info" />


    <ImageView
        android:id="@+id/view_tesoura"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/ic_tesoura"
        android:contentDescription="@string/tesoura_icon_description"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/view_papel"
        app:layout_constraintTop_toBottomOf="@+id/text_info" />

    <TextView
        android:id="@+id/text_info"
        android:layout_width="252dp"
        android:layout_height="51dp"
        android:layout_marginTop="32dp"
        android:text="@string/selecione"
        android:textColor="#000000"
        android:textSize="20sp"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iconeSelecionado"
        app:layout_constraintVertical_bias="0.034" />

    <TextView
        android:layout_width="110dp"
        android:layout_height="28dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/pedra"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/view_pedra"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/view_pedra"
        app:layout_constraintTop_toBottomOf="@id/view_pedra" />

    <TextView
        android:layout_width="110dp"
        android:layout_height="28dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/papel"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/view_papel"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@id/view_papel"
        app:layout_constraintTop_toBottomOf="@id/view_papel" />

    <TextView
        android:layout_width="110dp"
        android:layout_height="28dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/tesoura"
        android:textSize="20sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@id/view_tesoura"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/view_tesoura"
        app:layout_constraintTop_toBottomOf="@id/view_tesoura" />

    <EditText
        android:id="@+id/input_nome"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="228dp"
        android:backgroundTint="@color/white"
        android:hint="Digite seu nome"
        android:padding="12dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black2"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_info"
        app:layout_constraintWidth_percent="0.8" />

    <Button
        android:id="@+id/btn_jogar"
        android:layout_width="113dp"
        android:layout_height="53dp"
        android:text="Confimar"
        android:backgroundTint="@color/btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iconeSelecionado"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.897" />

</androidx.constraintlayout.widget.ConstraintLayout>